# Nextgen-cpq

./: .gitignore  README.md  conftest.py
apps/api/: catalog.json  database.py  dependencies.py  main.py  pyproject.toml  repository.py
apps/api/routers/: quotes.py
apps/ui/: package-lock.json  package.json  vite.config.js
apps/ui/src/: App.jsx  api.js  catalog.js
apps/ui/src/components/: CatalogPanel.jsx  QuotePanel.jsx
docs/: architecture.md
tests/: test_api_quotes.py  test_config_rules.py  test_pricing_engine.py  test_quote_service.py
